--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ img {
 	display: flex;
 }
 
-.menu__item + .menu__item {
+.menu__item+.menu__item {
 	margin-left: 2rem;
 	/* 32px */
 }
@@ -229,7 +229,7 @@ img {
 	-o-transform: scale(1.3);
 }
 
-.personal__item + .personal__item {
+.personal__item+.personal__item {
 	margin-left: 2.8125rem;
 	/* 45px */
 }
@@ -300,7 +300,7 @@ img {
 	-o-transform: scale(1.3);
 }
 
-.social__item + .social__item {
+.social__item+.social__item {
 	margin-left: 0.5rem;
 	/* 8px */
 }
@@ -356,24 +356,20 @@ img {
 
 .header__btn {
 	font-size: 1.5rem;
-	/*24px*/
-	line-height: 2.5em;
-	/*40px*/
-	letter-spacing: -0.02em;
+	/*24px*/line-height: 2.5em;
+	/*40px*/letter-spacing: -0.02em;
 	text-transform: capitalize;
-	border-radius: 2.1875rem;
-	/* 35px */
-	-webkit-border-radius: 2.1875rem;
-	-moz-border-radius: 2.1875rem;
-	-ms-border-radius: 2.1875rem;
-	-o-border-radius: 2.1875rem;
+	border-radius: 35px;
+	/*35px*/-webkit-border-radius: 35px;
+	-moz-border-radius: 35px;
+	-ms-border-radius: 35px;
+	-o-border-radius: 35px;
 	text-indent: -5.25rem;
-	/* 84px */
-	position: relative;
+	/*84px*/position: relative;
 	width: 17.5rem;
-	/* 280px */
-	height: 4.375rem;
-	/* 70px */
+	/*280px*/height: 4.375rem;
+	/*70px*/:;
+	-webkit-border-radius: 35px;
 }
 
 .header__btn::before {
@@ -426,11 +422,9 @@ img {
 }
 
 /* header */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
 @media only screen and (max-width: 768px) {
 	.header__top {
@@ -525,7 +519,7 @@ img {
 		/* 500px */
 	}
 
-	.menu__item + .menu__item {
+	.menu__item+.menu__item {
 		margin-left: 0;
 	}
 
@@ -545,8 +539,7 @@ img {
 	}
 }
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* smoothies */
 
@@ -659,11 +652,9 @@ img {
 }
 
 /* smoothies */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
 @media only screen and (max-width: 768px) {
 	.smoothies {
@@ -703,18 +694,6 @@ img {
 		/* 28px 0 30px */
 	}
 
-	/* .smoothies__item:nth-child(-n + 8) {
-		border-right: 2px solid #f6edde;
-	}
-	
-	.smoothies__item:nth-child(-n + 4) {
-		border-bottom: 2px solid #f6edde;
-	}
-	
-	.smoothies__item:nth-child(4),
-	.smoothies__item:last-child {
-		border-right: none;
-	} */
 	.smoothies__item:nth-child(-n + 8),
 	.smoothies__item:nth-child(-n + 4),
 	.smoothies__item:nth-child(4),
@@ -737,8 +716,7 @@ img {
 	}
 }
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* about */
 .about {
@@ -849,22 +827,16 @@ img {
 
 .about__btn {
 	font-size: 1.3rem;
-	/*21px*/
-	line-height: 1.05em;
+	/*21px*/line-height: 1.05em;
 	position: relative;
 	width: 23.875rem;
-	/*382px*/
-	height: 3.9375rem;
-	/*63px*/
-	padding: 0 5.625rem 0 1.375rem;
-	/*090px022px*/
-	border-radius: 1.875rem;
-	/*30px*/
+	/*382px*/height: 3.9375rem;
+	/*63px*/padding: 0 5.625rem 0 1.375rem;
+	/*090px022px*/border-radius: 30px;
 	-webkit-border-radius: 30px;
-	-moz-border-radius: 1.875rem;
-	-ms-border-radius: 1.875rem;
-	-o-border-radius: 1.875rem;
-	-webkit-border-radius: 1.875rem;
+	-moz-border-radius: 30px;
+	-ms-border-radius: 30px;
+	-o-border-radius: 30px;
 }
 
 .about__btn::before {
@@ -892,11 +864,9 @@ img {
 }
 
 /* about */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
 @media only screen and (max-width: 768px) {
 	.about {
@@ -916,7 +886,7 @@ img {
 	.about__img {
 		transition: none;
 		transform: none;
-		-webkit-transform: translateY(4rem);
+		-webkit-transform: none;
 		-moz-transform: none;
 		-ms-transform: none;
 		-o-transform: none;
@@ -937,8 +907,7 @@ img {
 	}
 }
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* product */
 
@@ -957,10 +926,13 @@ img {
 	flex-direction: column;
 	align-items: center;
 
-	width: 480px;
-	height: 720px;
+	min-width: 30rem;
+	/* 480px */
+	height: 45rem;
+	/* 720px */
 
-	padding-top: 130px;
+	padding-top: 8.125rem;
+	/* 130px */
 }
 
 .products__item--brown {
@@ -980,7 +952,8 @@ img {
 }
 
 .products__img {
-	margin-bottom: 25px;
+	margin-bottom: 1.5625rem;
+	/* 25px */
 }
 
 .products__img:hover {
@@ -1002,7 +975,8 @@ img {
 	line-height: 1.1em;
 	font-weight: 700;
 
-	margin-bottom: 5px;
+	margin-bottom: 0.3125rem;
+	/* 5px */
 }
 
 .products__subtitle {
@@ -1010,7 +984,8 @@ img {
 	/* 21px */
 	line-height: 1.5em;
 
-	margin-bottom: 60px;
+	margin-bottom: 3.75rem;
+	/* 60px */
 }
 
 .products__btn {
@@ -1018,14 +993,17 @@ img {
 	/* 21px */
 	line-height: 1.05em;
 
-	width: 207px;
-	height: 63px;
+	width: 13rem;
+	/* 208px */
+	height: 4rem;
+	/* 64px */
 
 	border: 2px solid #fff;
 
 	position: relative;
 
-	padding: 0 124px 0 30px;
+	text-indent: -5.625rem;
+	/* 90px */
 
 	border-radius: 30px;
 	-webkit-border-radius: 30px;
@@ -1041,27 +1019,27 @@ img {
 
 	display: block;
 
-	top: 20px;
-	left: 140px;
+	top: 1.25rem;
+	/* 20px */
+	left: 8.75rem;
+	/* 140px */
 
-	width: 30px;
-	height: 16px;
+	width: 1.875rem;
+	/* 30px */
+	height: 1rem;
+	/* 16px */
 
 	background: no-repeat center/cover url("../images/arrow_white.png");
 }
 
 /* products */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* story */
 
@@ -1131,17 +1109,13 @@ img {
 }
 
 /* story */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* testimonials */
 
@@ -1281,17 +1255,13 @@ img {
 }
 
 /* testimonials */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* blog */
 
@@ -1386,17 +1356,13 @@ img {
 }
 
 /* blog */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* instagram */
 .instagram {
@@ -1491,17 +1457,13 @@ img {
 }
 
 /* instagram */
-@media only screen and (max-width: 1440px) {
-}
+@media only screen and (max-width: 1440px) {}
 
-@media only screen and (max-width: 992px) {
-}
+@media only screen and (max-width: 992px) {}
 
-@media only screen and (max-width: 768px) {
-}
+@media only screen and (max-width: 768px) {}
 
-@media only screen and (max-width: 320px) {
-}
+@media only screen and (max-width: 320px) {}
 
 /* footer */
 .footer__top {
