--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,7 +123,7 @@ img {
 	display: flex;
 }
 
-.menu__item+.menu__item {
+.menu__item + .menu__item {
 	margin-left: 2rem;
 	/* 32px */
 }
@@ -229,7 +229,7 @@ img {
 	-o-transform: scale(1.3);
 }
 
-.personal__item+.personal__item {
+.personal__item + .personal__item {
 	margin-left: 2.8125rem;
 	/* 45px */
 }
@@ -300,7 +300,7 @@ img {
 	-o-transform: scale(1.3);
 }
 
-.social__item+.social__item {
+.social__item + .social__item {
 	margin-left: 0.5rem;
 	/* 8px */
 }
@@ -356,20 +356,24 @@ img {
 
 .header__btn {
 	font-size: 1.5rem;
-	/*24px*/line-height: 2.5em;
-	/*40px*/letter-spacing: -0.02em;
+	/*24px*/
+	line-height: 2.5em;
+	/*40px*/
+	letter-spacing: -0.02em;
 	text-transform: capitalize;
 	border-radius: 35px;
-	/*35px*/-webkit-border-radius: 35px;
+	/*35px*/
+	-webkit-border-radius: 35px;
 	-moz-border-radius: 35px;
 	-ms-border-radius: 35px;
 	-o-border-radius: 35px;
 	text-indent: -5.25rem;
-	/*84px*/position: relative;
+	/*84px*/
+	position: relative;
 	width: 17.5rem;
-	/*280px*/height: 4.375rem;
-	/*70px*/:;
-	-webkit-border-radius: 35px;
+	/*280px*/
+	height: 4.375rem;
+	/*70px*/
 }
 
 .header__btn::before {
@@ -422,9 +426,11 @@ img {
 }
 
 /* header */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
 @media only screen and (max-width: 768px) {
 	.header__top {
@@ -519,7 +525,7 @@ img {
 		/* 500px */
 	}
 
-	.menu__item+.menu__item {
+	.menu__item + .menu__item {
 		margin-left: 0;
 	}
 
@@ -539,7 +545,8 @@ img {
 	}
 }
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* smoothies */
 
@@ -652,9 +659,11 @@ img {
 }
 
 /* smoothies */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
 @media only screen and (max-width: 768px) {
 	.smoothies {
@@ -716,7 +725,8 @@ img {
 	}
 }
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* about */
 .about {
@@ -827,12 +837,16 @@ img {
 
 .about__btn {
 	font-size: 1.3rem;
-	/*21px*/line-height: 1.05em;
+	/*21px*/
+	line-height: 1.05em;
 	position: relative;
 	width: 23.875rem;
-	/*382px*/height: 3.9375rem;
-	/*63px*/padding: 0 5.625rem 0 1.375rem;
-	/*090px022px*/border-radius: 30px;
+	/*382px*/
+	height: 3.9375rem;
+	/*63px*/
+	padding: 0 5.625rem 0 1.375rem;
+	/*090px022px*/
+	border-radius: 30px;
 	-webkit-border-radius: 30px;
 	-moz-border-radius: 30px;
 	-ms-border-radius: 30px;
@@ -864,9 +878,11 @@ img {
 }
 
 /* about */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
 @media only screen and (max-width: 768px) {
 	.about {
@@ -907,7 +923,8 @@ img {
 	}
 }
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* product */
 
@@ -1033,13 +1050,17 @@ img {
 }
 
 /* products */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+}
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* story */
 
@@ -1109,13 +1130,17 @@ img {
 }
 
 /* story */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+}
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* testimonials */
 
@@ -1255,13 +1280,17 @@ img {
 }
 
 /* testimonials */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+}
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* blog */
 
@@ -1356,13 +1385,17 @@ img {
 }
 
 /* blog */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+}
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* instagram */
 .instagram {
@@ -1457,13 +1490,17 @@ img {
 }
 
 /* instagram */
-@media only screen and (max-width: 1440px) {}
+@media only screen and (max-width: 1440px) {
+}
 
-@media only screen and (max-width: 992px) {}
+@media only screen and (max-width: 992px) {
+}
 
-@media only screen and (max-width: 768px) {}
+@media only screen and (max-width: 768px) {
+}
 
-@media only screen and (max-width: 320px) {}
+@media only screen and (max-width: 320px) {
+}
 
 /* footer */
 .footer__top {
